fix: align of main element

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -15,10 +15,13 @@ body {
   font-size: $font-sm;
   background-color: $lightGrayishBlue;
   color: $white;
-  // display: flex;
-  // height: 100vh;
-  // align-items: center;
-  // justify-content: center;
+
+  main {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   .opacity {
     opacity: 70%;
